--- a/hosts.yml
+++ b/hosts.yml
@@ -1,16 +1,9 @@
 all:
   children:
-    ansible:
-      hosts:
-        localhost:
-          ansible_connection: local
-          ansible_user: ubuntu
-    prod:
-      vars:
-        env: prod
-        ansible_ssh_common_args: '-o StrictHostKeyChecking=no'
-
+    test:
       hosts:
         ic-webapp_host:
-          ansible_host: 172.31.86.185
-          hostname: TBD
+          ansible_host: 172.31.89.218
+          ansible_user: ubuntu
+          ansible_ssh_common_args: '-o StrictHostKeyChecking=no'
+
